--- a/Docs/Tesi/casi_uso.tex
+++ b/Docs/Tesi/casi_uso.tex
@@ -70,8 +70,7 @@ Una rappresentazione grafica dei casi d'uso dell'Operatore è disponibile in fig
 	  Per selezionare un responsabile scientifico è possibile usare l'apposito menù a tendina o, in alternativa, qualora la persona cercata non sia nell'elenco, aggiungerla cliccando sul pulsante ``Aggiungi''.
 	\item Il referente
 	\item La dittà\\
-	  Per selezionare una dittà si può usare l'apposito menù a tendina o, se la dittà cercata non fosse presente nell'elenco, aggiungerne una nuova cliccando sul pulsante ``Aggiungi''.Per ulteriori dettagli si rimanda al
-	  rispettivo caso d'uso.
+	  Per selezionare una dittà si può usare l'apposito menù a tendina o, se la dittà cercata non fosse presente nell'elenco, aggiungerne una nuova cliccando sul pulsante ``Aggiungi''.Per ulteriori dettagli si rimanda \ref{UC_new_company}.
 	\item Il nome del progetto CIA
 	\item Il Repertorio
 	\item Il totale imponibile
@@ -261,9 +260,14 @@ l'Operatore clicca su ``Salva'' avendo inserito un codice fiscale di una dittà 
   Percorso base:
   l'Operatore raggiunge l'elenco delle ditte quindi clicca sul pulsante ``Visualizza ditta'' che compare sulla destra selezionando la riga dell'elenco corrispondente alla ditta desiderata.
 
-\item Visualizzazione dell'elenco delle ditte \label{UC_view_company_list}
+\item Visualizzazione dell'elenco delle ditte\\ \label{UC_view_company_list}
   Percorso base:
   l'Operatore dalla pagina iniziale clicca sul pulsante ``Visualizza elenco ditte''. Viene presentata una schermata contente un elenco di ditte filtrabili per nome attraverso l'apposito filtro di ricerca.
+  
+\item Visualizzazione dello Scadenzario\\ \label{UC_view_deadlines}
+  Percorso base:
+  l'Operatore dalla pagina iniziale clicca sul pulsante ``Visualizza scadenzario'', Viene presentata una schermata contente un elenco di contratti che hanno delle rate con scadenze attive. E' possibile filtrare i risultati in base a vari
+  criteri di ricerca. Selezionando una convenzione/contributo e cliccando sul pulsante ``Visualizza'' che compare sulla destra è possibile visualizzare una convenzione/contributo, per i dettagli su questa operazione si rimanda a \ref{UC_view_contract}
 
 \end{enumerate}
 
