--- a/Docs/Tesi/collaudo.tex
+++ b/Docs/Tesi/collaudo.tex
@@ -15,7 +15,7 @@ Si elencano gli scenari che sono stati usato per il collaudo.
  \item L'Amministratore aggiunge un utente \label{MS6}
 \end{enumerate}
 
-In tabella \ref{macro_scenari} i casi di test esercitati per ogni scenario.\\
+In tabella \ref{macro_scenari} i casi di test esercitati per ogni scenario. Un caso di test è definito con il numero del caso d'uso corrispondente e un flusso di esecuzione (combinazione del percorso base e uno o più percorsi alternativi) \\
 
 
 \begin{table}[h]
@@ -32,11 +32,11 @@ In tabella \ref{macro_scenari} i casi di test esercitati per ogni scenario.\\
     \hline
     \ref{MS3} & \ref{UC_view_company_list} base, \ref{UC_edit_company} base \\
     \hline
-    \ref{MS4} & \ref{UC_new_contract}\\
+    \ref{MS4} & \ref{UC_new_contract} base\\
     \hline
     \ref{MS5} & \ref{UC_view_own_contract_list} base, \ref{UC_manage_attachments} base\\
     \hline
-    \ref{MS6} & \ref{UC_new_user}\\
+    \ref{MS6} & \ref{UC_new_user} base\\
     \hline
   \end{tabular} 
 
