--- a/Docs/Tesi/introduzione_analisi.tex
+++ b/Docs/Tesi/introduzione_analisi.tex
@@ -1,1 +1,1 @@
-Nel Capitolo \ref{analisi} vengono descritti il \textsl{Modello di Dominio} e il \textsl{Diagramma dei Casi d'Uso}. Una cosa da mettere in evidenza è il fatto che il Modello di Dominio dell'applicazione è costituito da due parti \textquoteleft ortogonali' tra loro: il \textsl{Modello di Business}, che descrive la \textquoteleft Business Logic' dell'applicazione, e il \textsl{Modello degli Utenti}, che descrive il modo in cui l'applicazione gestisce gli utenti e i loro permessi.
+In questo capitolo vengono descritti il \textsl{Modello di Dominio} e il \textsl{Diagramma dei Casi d'Uso}. Una cosa da mettere in evidenza è il fatto che il Modello di Dominio dell'applicazione è costituito da due parti \textquoteleft ortogonali' tra loro: il \textsl{Modello di Business}, che descrive la \textquoteleft Business Logic' dell'applicazione, e il \textsl{Modello degli Utenti}, che descrive il modo in cui l'applicazione gestisce gli utenti e i loro permessi.
