--- a/Docs/Tesi/introduzione_dietro_le_quinte.tex
+++ b/Docs/Tesi/introduzione_dietro_le_quinte.tex
@@ -1,2 +1,1 @@
-\section{Dietro le Quinte}
-Questo capitolo descrive come il sistema reagisce internamente all'input dell'utente. È rivolto soprattutto a chi avrà a che fare con l'ampliamento delle funzionalità dell'applicazione, perché si focalizza non tanto su \textit{cosa} fa il programma, ma sul \textit{come} lo fa.
+Questo capitolo descrive come il sistema reagisce internamente all'input dell'utente. È rivolto soprattutto a chi avrà a che fare con l'ampliamento delle funzionalità dell'applicazione, perché si focalizza non tanto su \emph{cosa} fa il programma, ma sul \emph{come} lo fa.
