--- a/Docs/Tesi/biblio.bib
+++ b/Docs/Tesi/biblio.bib
@@ -46,3 +46,33 @@ howpublished = {\url{http://docs.jboss.org/weld/reference/1.0.0/en-US/html/}},
       title = "JLDAP",
       howpublished = {\url{http://www.openldap.org/jldap/}},
 }
+@misc{joda,
+      title = "Joda Money",
+      howpublished = {\url{http://www.joda.org/joda-money/}},
+}
+@misc{hibernate,
+      title = "Hibernate",
+      howpublished = {\url{http://www.hibernate.org/}},
+}
+@misc{prime,
+      title = "Prime Faces",
+      howpublished = {\url{http://primefaces.org/}},
+}
+@misc{cdi,
+    title = "Specifica di CDI",
+    howpublished = {\url{http://www.cdi-spec.org/download/}},
+}
+@misc{javBeans,
+    title = "Specifica di Java Beans",
+    howpublished = {\url{http://www.oracle.com/technetwork/java/javase/documentation/spec-136004.html}},
+}
+@misc{managedBean,
+    title = "Specifica di Managed Bean",
+    howpublished = {\url{http://jcp.org/aboutJava/communityprocess/final/jsr316/}},
+}
+
+
+
+
+
+
