--- a/Docs/Tesi/biblio.bib
+++ b/Docs/Tesi/biblio.bib
@@ -62,7 +62,7 @@ howpublished = {\url{http://docs.jboss.org/weld/reference/1.0.0/en-US/html/}},
     title = "Specifica di CDI",
     howpublished = {\url{http://www.cdi-spec.org/download/}},
 }
-@misc{javBeans,
+@misc{javaBeans,
     title = "Specifica di Java Beans",
     howpublished = {\url{http://www.oracle.com/technetwork/java/javase/documentation/spec-136004.html}},
 }
