--- a/Docs/Tesi/freemarker.tex
+++ b/Docs/Tesi/freemarker.tex
@@ -1,6 +1,6 @@
 
 \textsl{FreeMarker} è un package Java che consente di produrre output testuale basandosi su un template. È stato progettato specificatamente per la generazione automatica di pagine HTML, anche se può creare vari tipi di pagine. La caratteristica principale è che consente di separare la logica che costruisce la pagina con il template in base alla quale viene prodotta; in questo modo, il template è modificabile senza l'intervento di un programmatore (anche se, senza modificare il codice, non è possibile utilizzare informazioni non ricavabili dagli oggetti a cui si ha già accesso).\\
-Nei paragrafi che seguono verrà descritto il package FreeMarker e spiegato come è stato usato all'interno dell'applicazione. Per maggiori informazioni su questo tool, si rimanda alla pagina web relativa al progetto INSERIRE RIFERIMENTO A PAGINA WEB, dalla quale sono stati presi - fra l'altro - gli esempi sul funzionamento e utilizzo del software.
+Nei paragrafi che seguono verrà descritto il package FreeMarker e spiegato come è stato usato all'interno dell'applicazione. Per maggiori informazioni su questo tool, si rimanda alla pagina web relativa al progetto \cite{freemarker}, dalla quale sono stati presi - fra l'altro - gli esempi sul funzionamento e utilizzo del software.
 
 
 \subsubsection{Funzionamento}
