--- a/Docs/Tesi/lista_business.tex
+++ b/Docs/Tesi/lista_business.tex
@@ -1,4 +1,5 @@
-\subsubsection{Pager e Criteria API}
+\subsection{Pager e Criteria API}
+\label{list_business}
 Le classi che si occupano del recupero delle informazioni dal database sono \texttt{ContractSearchService} e \texttt{DeadLineSerachService} la prima è usata per costruire lo scadenzario mentre la seconda è usata per la lista
 delle convenzioni/contributi. Queste classi si differenziano solo per il tipo di query che eseguono ma sono simili per struttura, per cui di qui in avanti ci si riferirà solo a \texttt{ContractSearchService}. 
 Lo scopo di queste classi è effettuare un ricerca paginata sul database secondo vari criteri di ricerca quali 
