--- a/Docs/Tesi/collaudo.tex
+++ b/Docs/Tesi/collaudo.tex
@@ -59,7 +59,7 @@ In tabella \ref{macro_scenari} i casi di test esercitati per ogni scenario. Un c
     \hline
     3 & L'Operatore inserisce i dati e clicca su ``Salva'' & Si ritorna al primo passo della procedura, la dittà appena creata è selezionata automaticamente nel menù a tendina & Uguale al risultato atteso & Sì\\
     \hline
-    4 & L'Operatore clicca next e passa al secondo passo della procedura, quindi inserisce una quota per il personale, infine aggiunge uno o più docenti tramite l'apposito pulsante ``Aggiungi'' in basso, in modo che la somma sia 100 & La schermata
+    4 & L'Operatore clicca ``Avanti'' e passa al secondo passo della procedura, quindi inserisce una quota per il personale, infine aggiunge uno o più docenti tramite l'apposito pulsante ``Aggiungi'' in basso, in modo che la somma sia 100 & La schermata
       riflette le scelte dell'operatore aggiornando i valori percentuali dei vari campi. & Uguale al risultato atteso& Sì\\
     \hline
     5 & L'operatore clicca su ``Avanti'',quindi sul pulsante ``Aggiungi''nel passo successivo della procedura & Si apre una finestra di dialogo contenente la procedura di creazione di una rata & Uguale al risultato atteso & Sì\\
@@ -72,8 +72,6 @@ In tabella \ref{macro_scenari} i casi di test esercitati per ogni scenario. Un c
     \hline
 \end{longtable}
 }
-
-Qui gli screenshots!!!Bellini e nn malsani!
 
  \item Scenario \ref{MS2}\\\\
  {
