--- a/Jama/src/main/resources/messages.properties
+++ b/Jama/src/main/resources/messages.properties
@@ -155,7 +155,7 @@ err_invalidDeadline=La data di scadenza non è valida
 err_invalidDeadline_detail=La data di scadenza non è valida (è precedente alla data di inizio)
 
 err_instInvalidDeadline=La data di scadenza non è valida
-err_instInvalidDeadline_detail=La data di scadenza non è valida (è precedente alla data di inizio o successiva a quella di scadenza della convenzione)
+err_instInvalidDeadline_detail=La data di scadenza non è valida (è precedente alla data di inizio)
 
 err_passwordMismatch=Le password inserite non corrispondono
 err_invalidPassword=La password inserita non è valida
