--- a/Docs/Tesi/collaudo.tex
+++ b/Docs/Tesi/collaudo.tex
@@ -83,7 +83,7 @@ In tabella \ref{macro_scenari} i casi di test esercitati per ogni scenario. Un c
     1 & L'Operatore clicca sul pulsante ``Visualizza lista contratti'' & Viene visualizzata una schermata contenente l'elenco dei contratti & Uguale 
       al risultato atteso& Sì\\
     \hline
-    2 & L'Operatore seleziona il contributo di cui si vuole modificare la rata, quindi clicca sul pulsnate ``Modifica'' che appare a destra sulla riga selezionata& Viene visualizzata una schermata divida in scheda che mostra i dettagli
+    2 & L'Operatore seleziona la convenzione di cui si vuole modificare la rata, quindi clicca sul pulsante ``Modifica'' che appare a destra sulla riga selezionata& Viene visualizzata una schermata divida in scheda che mostra i dettagli
     della convenzione& Uguale al risultato atteso & Sì\\
     \hline
     3 & L'Operatore raggiunge la scheda ``Rate'' quindi dopo avere selezionato la rata desiderata dall'elenco clicca sul pulsante ``Modifica'' che appare sulla destra& Appare una finestra di dialogo che mostra i dettagli della rata & Uguale al risultato atteso & Sì\\
@@ -186,3 +186,108 @@ In tabella \ref{macro_scenari} i casi di test esercitati per ogni scenario. Un c
 
 }
 \end{itemize}
+
+\begin{figure}
+	\centering
+	\scalebox{0.5}{\includegraphics{Aggiungi_Ditta_Dialog.png}}
+	\caption{Inserimento Ditta - Scenario 1 Passo 2}
+	\label{aggiungiDitta}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.25}{\includegraphics{Allegati.png}}
+	\caption{Lista Allegati - Scenario 4 Passo 2}
+	\label{allegati}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.25}{\includegraphics{Allegato_Inserito.png}}
+	\caption{Inserimento Allegato - Scenario 5 Passo 5}
+	\label{allegatiDopoInserimento}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.25}{\includegraphics{Creazione_Utente.png}}
+	\caption{Inserimento utente - Scenario 6 Passo 2}
+	\label{creazioneUtente}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.3}{\includegraphics{Dialog_Ditta_Modifica.png}}
+	\caption{Modifica Ditta - Scenario 3 Passo 3}
+	\label{modificaDitta}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.25}{\includegraphics{Fine_Contributo.png}}
+	\caption{Salvataggio contributo - Scenario 4 Passo 5}
+	\label{fineContributo}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.25}{\includegraphics{Lista_Convenzioni.png}}
+	\caption{Lista Contratti - Scenario 2 Passo 2}
+	\label{Lista delle convenzioni/contributi}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.25}{\includegraphics{Lista_ditte_modifica.png}}
+	\caption{Lista ditte - Scenario 3 Passo 2}
+	\label{ListaDitte}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.25}{\includegraphics{Lista_Rate_Modifica.png}}
+	\caption{Lista rate - Scenario 2 Passo 3}
+	\label{ListaRate}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.25}{\includegraphics{Lista_utenti.png}}
+	\caption{Lista utenti - Scenario 6 Passo 3}
+	\label{ListaUtenti}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.28}{\includegraphics{Tab_Dati.png}}
+	\caption{Dati convenzione - Scenario 1 Passo 1}
+	\label{tabDati}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.28}{\includegraphics{Tab_Dati_Contributo.png}}
+	\caption{Dati Contributo - Scenario 4 Passo 1}
+	\label{tabDatiContributo}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.28}{\includegraphics{Tab_Dati_visualizzazione.png}}
+	\caption{Visualizzazione convenzione - Scenario 5 Passo 1}
+	\label{tabDatiVisualizzazione}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.28}{\includegraphics{Tab_Rip.png}}
+	\caption{Tabella Ripartizione - Scenario 1 Passo 4}
+	\label{tabRip}
+\end{figure}
+
+\begin{figure}
+	\centering
+	\scalebox{0.28}{\includegraphics{Tab_Rip_Rata.png}}
+	\caption{Tabella Ripartizione Rata - Scenario 1 Passo 6}
+	\label{tabRipRata}
+\end{figure}
