bozza conclusione - retorica #1 (+ fix tex vari)

--- a/Docs/Tesi/Tesi.tex
+++ b/Docs/Tesi/Tesi.tex
@@ -66,7 +66,8 @@ basata sui framework JPA, JSF, CDI, \\
 per l'amministrazione di attività di trasferimento tecnologico\\\vspace{1.5cm}
 Analysis and development of a web application \\
 based on the JPA, JSF, and CDI frameworks \\
-for administration of technology transfer activities
+for administration of \\
+technology transfer activities
 }
 \author{Tommaso Levato, Alessio Sarullo, Giulio Galvan}
 \titolocorso{Ingegneria Informatica}
@@ -150,6 +151,9 @@ for administration of technology transfer activities
 \chapter{Test funzionale e collaudo}
 \label{howto}
 \input{collaudo}
+
+\chapter{Conclusione}
+\input{conclusione}
 
 \nocite{*}		 % Mostra in bibliografia anche gli oggetti non citati 
 \bibliography{biblio}{}
